--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,8 @@ textarea {
   position: absolute;
   left: 15px;
   right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
