--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,6 +15,8 @@
   position: absolute;
   left: 15px;
   right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   padding: 40px;
   background: $white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
